# obehy

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  BASE_PLAN.md  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_milestone_0.py
src/obehy/: __init__.py  national_jdf.py
src/obehy/domain/: __init__.py  identifiers.py  locations.py  schedule.py
src/obehy/fixtures/: __init__.py  projections.py
src/obehy/identity/: __init__.py  services.py
src/obehy/persistence/: database.py  models.py  services.py
tests/fixtures/: README.md
tests/fixtures/czptt/: expected.json
tests/fixtures/czptt/native/: train.xml
tests/fixtures/duk/: expected.json
tests/fixtures/duk/native/: vehicle.json
tests/fixtures/jdf/export_a/: expected.json
tests/fixtures/jdf/export_a/native/: Oznacniky.txt  VerzeJDF.txt  Zastavky.txt
tests/fixtures/jdf/export_b/: expected.json
tests/fixtures/jdf/export_b/native/: Oznacniky.txt  VerzeJDF.txt  Zastavky.txt
tests/fixtures/pid/: expected.json
tests/fixtures/pid/native/: agency.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
tests/integration/: conftest.py  test_identity.py  test_milestone_acceptance.py  test_national_jdf_live.py
tests/unit/: test_fixture_projections.py  test_identifiers.py  test_locations.py  test_national_jdf.py  test_schedule.py
