[project]
name = "obehy"
version = "0.1.0"
description = "Canonical Czech public-transport data contracts"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.16,<2",
  "geoalchemy2>=0.18,<1",
  "psycopg[binary]>=3.2,<4",
  "rich>=14,<15",
  "sqlalchemy>=2.0.41,<3",
]

[project.scripts]
obehy-national-jdf = "obehy.national_jdf:main"

[dependency-groups]
dev = [
  "pyright>=1.1.403,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obehy"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: requires the PostgreSQL/PostGIS test database",
  "national_jdf_live: downloads and converts the complete live national JDF inputs",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = ["converters"]
